--- a/pendahuluan.tex
+++ b/pendahuluan.tex
@@ -10,6 +10,11 @@ berbasis Linux Mint. Meskipun seharusnya semuanya kompatibel dengan berbagai
 sistem operasi, kemungkinan ada hal-hal yang agak berbeda. Jika hal itu
 terjadi, gunakan internet untuk mencari jawabannya.
 
+\section{Instalasi}
+Python dapat diperoleh secara gratis dari berbagai sumber. Sumber utamanya
+adalah di situs python.org. Untuk sementara ini bagian ini saya serahkan kepada
+Anda. Ada terlalu banyak perubahan sehingga bagian ini akan cepat kadaluwarsa.
+
 \section{Memulai}
 Untuk memastikan Python berjalan, ketikkan "python" di terminal Linux Anda.
 (Bagi yang menggunakan Windows, hal ini dapat dilakukan dengan menggunakan
@@ -25,4 +30,30 @@ Type "help", "copyright", "credits" or "license" for more information.
 \end{verbatim}
 
 Dari tampilan di atas dapat kita ketahui bahwa Python yang saya gunakan adalah
-versi 2.7.12.
+versi 2.7.12. Sekarang kita dapat memulai pemrograman Python dengan menuliskan
+program ``hello world'' (yang merupakan standar bagi belajar pemrograman).
+Ketikkan ``print ...'' (dan seterusnya seperti di bawah ini).
+
+\begin{verbatim}
+print "Hello, world!"
+Hello, world!
+\end{verbatim}
+
+Python akan menampilkan apapun yang ada di antara tanda petik tersebut. Hore!
+Anda berhasil membuat program Python yang pertama.
+
+Mari kita lanjutkan dengan membuat program yang lebih panjang. Program Python
+dapat disimpan di dalam sebuah berkas untuk kemudian dieksekusi belakangan.
+Buka editor kesukaan Anda dan ketikkan program hello world di atas di dalam
+editor Anda tersebut. Setelah itu simpan berkas tersebut dengan nama
+``hello.py''. Biasanya berkas program Python ditandai dengan akhiran
+(extension) ``.py''.
+
+Setelah berkas tersebut tersedia, maka kita dapat menjalankan Python dengan
+memberikan perintah python dan nama berkas tersebut.
+
+\begin{verbatim}
+$ python hello.py
+Hello, world!
+\end{verbatim}
+
