--- a/pendahuluan.tex
+++ b/pendahuluan.tex
@@ -1,6 +1,8 @@
 \chapter{Pendahuluan}
 Bahasa pemrograman Python mulai populer saat dikarenakan berbagai hal; mudah
-dipelajari, tersedia dan banyak {\em library}-nya. Berbagai sekolah (dan
+dipelajari, tersedia dan banyak {\em library}-nya. Nanti akan kita bahas beberapa
+library Python ini. Lengkapnya library ini juga yang menyebabkan
+Python dipergunakan di berbagai aplikasi. Berbagai sekolah (dan
 perguruan tinggi) bahkan mengajarkan Python sebagai pengantar pemrograman.
 
 Bahasa Python tersedia untuk berbagai sistem operasi; Windows, Mac OS, dan
@@ -14,6 +16,10 @@ terjadi, gunakan internet untuk mencari jawabannya.
 Python dapat diperoleh secara gratis dari berbagai sumber. Sumber utamanya
 adalah di situs python.org. Untuk sementara ini bagian ini saya serahkan kepada
 Anda. Ada terlalu banyak perubahan sehingga bagian ini akan cepat kadaluwarsa.
+
+Untuk sistem operasi berbasis Linux dan Mac OS, Python sudah terpasang sebagai
+bawaan dari sistem operasinya. Jika Anda ingin menggunakan versi terbaru maka
+Anda harus memasangnya sendiri dengan mengunduh instalasinya di python.org.
 
 \section{Memulai}
 Untuk memastikan Python berjalan, ketikkan "python" di terminal Linux Anda.
