--- a/python.tex
+++ b/python.tex
@@ -17,7 +17,7 @@
 
 
 
-\title{Pemrograman Python}
+\title{Koding Python}
 \author{Budi Rahardjo}
 
 \usepackage{graphicx} % Needed to insert images into the document
@@ -40,6 +40,7 @@
 
 \include{pengantar}
 \include{pendahuluan}
+\include{advanced}
 \include{tricks}
 
 \bibliography{referensi}
