--- a/pendahuluan.tex
+++ b/pendahuluan.tex
@@ -63,3 +63,15 @@ $ python hello.py
 Hello, world!
 \end{verbatim}
 
+\section{Bahasa Python} 
+Tentang bahasa Python itu sendiri akan diperdalam pada versi berikutnya. Sementara itu fitur tentang bahasa Python akan dibahas sambil
+
+Hal yang sangat berbeda dari bahasa Python dengan
+bahasa pemrograman lainnya adalah masalah {\em block} dari kode. Bahasa pemrograman C misalnya menggunakan tanda kurung kurawal ``\{'' untuk menyatakan blok. Sementara itu Python menggunakan {\em indentation} untuk menyatakan satu blok. Lihat contoh di bawah ini.
+
+\begin{verbatim}
+for in in range(10):
+    print i
+\end{verbatim}
+
+Disarankan untuk menggunakan spasi sebanyak empat (4) buah untuk {\em indentation} tersebut.
