--- a/pendahuluan.tex
+++ b/pendahuluan.tex
@@ -64,7 +64,10 @@ Hello, world!
 \end{verbatim}
 
 \section{Bahasa Python} 
-Tentang bahasa Python itu sendiri akan diperdalam pada versi berikutnya. Sementara itu fitur tentang bahasa Python akan dibahas sambil
+Tentang bahasa Python itu sendiri akan diperdalam pada versi berikutnya.
+Sementara itu fitur tentang bahasa Python akan dibahas sambil berjalan.
+Pendekatan ini saya ambil untuk membuat buku menjadi lebih menarik dan lebih
+singkat. Belajar seperlunya.
 
 Hal yang sangat berbeda dari bahasa Python dengan
 bahasa pemrograman lainnya adalah masalah {\em block} dari kode. Bahasa pemrograman C misalnya menggunakan tanda kurung kurawal ``\{'' untuk menyatakan blok. Sementara itu Python menggunakan {\em indentation} untuk menyatakan satu blok. Lihat contoh di bawah ini.
@@ -74,4 +77,6 @@ for in in range(10):
     print i
 \end{verbatim}
 
-Disarankan untuk menggunakan spasi sebanyak empat (4) buah untuk {\em indentation} tersebut.
+Disarankan untuk menggunakan spasi sebanyak empat (4) buah untuk {\em
+indentation} tersebut. (Ini membuat banyak perdebatan karena ada banyak orang
+yang menggunakan tab bukan spasi.)
