--- a/pengantar.tex
+++ b/pengantar.tex
@@ -7,6 +7,11 @@ menggunakan bahasa Perl, tetapi karena tuntutan zaman yang banyak membutuhkan
 pemrograman dengan menggunakan bahasa Python maka saya kembali mempelajari
 bahasa Python.
 
+Buku ini lebih banyak menampilkan contoh-contoh yang saya gunakan untuk
+mengingat-ingat hal-hal yang pernah saya kerjakan atau untuk mencari ide ketika
+memecahkan masalah lain. Jadinya buku ini seperti sebuah {\em cookbook}. Semoga
+pendekatan seperti ini cocok juga untuk Anda.
+
 Yang namanya catatan tentu saja sesuai dengan apa yang saya lakukan. Basis saya
 menggunakan Linux. Jadi ada kemungkinan contoh yang tidak persis sama. Demikian
 pula cara saya menggunakan (memprogram dengan) Python mungkin bukan cara yang
@@ -17,6 +22,6 @@ meskipun versi 3 juga sudah banyak digunakan orang. Ada banyak bagian di dalam
 buku ini yang dituliskan untuk Python versi 2.7 kemungkinan harus disesuaikan
 untuk versi 3. Namun secara prinsip mestinya sama.
 
-Selamat menikmati.\\
+Selamat menikmati versi 0.1.\\
 Bandung, Desember 2017\\
 Budi Rahardjo
