--- a/pendahuluan.tex
+++ b/pendahuluan.tex
@@ -191,3 +191,10 @@ Jika Anda ingin langsung aktif, bisa juga berkas tersebut di-source.
     source ~/.bashrc
 \end{verbatim}
     
+Untuk memasang modul-modul di Python3 dapat dilakukan dengan cara
+memanggil python3 secara eksplisit. Sebagai contoh, untuk memasang
+modul ``numpy'' pada (dengan) python3 adalah sebagai berikut.
+
+\begin{verbatim}
+python3 -m pip install numpy
+\end{verbatim}
