--- a/pendahuluan.tex
+++ b/pendahuluan.tex
@@ -225,6 +225,15 @@ nama2 = "rahardjo"
 nama3 = nama1 + nama2
 print(nama3)
 \end{verbatim}
+
+Perhatikan bahwa untuk variabel yang berjenis angka (integer) maka operator 
+tambah (+) akan menambahkan angkanya. Sementara itu pada variabel yang
+berjenis {\em string}, operator (+) akan menyambungkan ({\em concatenate})
+variabel {\em string} tersebut.
+Ini merupakan ciri dari sebuah bahasa yang berorientasi obyek
+({\em object oriented}).
+Untuk tipe data yang lainnya, operator tambah (+) kemungkinan juga akan
+memiliki perilaku yang berbeda.
     
 \section{Input}
 Salah satu cara untuk mendapatkan masukan (input) dari pengguna secara
