--- a/pengantar.tex
+++ b/pengantar.tex
@@ -17,11 +17,16 @@ menggunakan Linux. Jadi ada kemungkinan contoh yang tidak persis sama. Demikian
 pula cara saya menggunakan (memprogram dengan) Python mungkin bukan cara yang
 paling sempurna, tetapi mengikuti cara saya. (Apapun itu.)
 
-Ketika buku ini ditulis, versi Python yang paling stabil adalah versi 2.7
+\st{Ketika buku ini ditulis, versi Python yang paling stabil adalah versi 2.7
 meskipun versi 3 juga sudah banyak digunakan orang. Ada banyak bagian di dalam
 buku ini yang dituliskan untuk Python versi 2.7 kemungkinan harus disesuaikan
-untuk versi 3. Namun secara prinsip mestinya sama.
+untuk versi 3. Namun secara prinsip mestinya sama.} 
 
-Selamat menikmati versi 0.1.\\
-Bandung, Desember 2017\\
+Versi buku ini sudah menganjurkan untuk lebih condong ke versi 3
+karena pengembangan versi 2 sudah mulai dihentikan.
+[Catatan: buku mulai ditulis akhir 2017.]
+
+
+Selamat menikmati versi 0.2.\\
+Bandung, Oktober 2018\\
 Budi Rahardjo
