--- a/python.tex
+++ b/python.tex
@@ -11,6 +11,7 @@
 \usepackage{mdframed}
 \usepackage{amsmath}
 \usepackage[toc,page]{appendix}
+\usepackage{soul}
 
 % supaya subsection bernomor
 \setcounter{secnumdepth}{2}
